--- a/package.json
+++ b/package.json
@@ -3,7 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
   "devDependencies": {
+    "@types/lodash.isfunction": "^3.0.9",
+    "@types/node": "^20.14.9",
+    "@types/react": "^18.3.3",
+    "react": "^18.3.1",
     "vite": "^5.3.2"
+  },
+  "dependencies": {
+    "eventemitter3": "^5.0.1",
+    "lodash.isfunction": "^3.0.9"
   }
 }
